fix about section mobile

--- a/src/components/03_About/About.css
+++ b/src/components/03_About/About.css
@@ -56,7 +56,7 @@
   .panels__container {
     width: 100%;
     margin: 0 auto;
-    background-color: azure;
+    /* background-color: azure; */
   }
 
   .panels__items {
